@@ -7,27 +7,23 @@ import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.io.InputStreamReader;
+import java.io.BufferedReader;
+import java.io.FileInputStream;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
 
 public class SupabaseStorageClient {
-    private final HttpClient client;
     private final ObjectMapper mapper;
 
     private String accessToken;
     private String userId;
 
     public SupabaseStorageClient() {
-        client = HttpClient.newBuilder()
-                .connectTimeout(Duration.ofSeconds(30))
-                .build();
         mapper = new ObjectMapper();
     }
 
@@ -42,7 +38,7 @@ public class SupabaseStorageClient {
     }
 
     private void checkUserId() {
-        if (userId == null || userId.isBlank())
+        if (userId == null || userId.trim().isEmpty())
             throw new IllegalStateException("User ID must be set before calling storage methods");
     }
 
@@ -53,78 +49,74 @@ public class SupabaseStorageClient {
         return userId + "/" + path;
     }
 
-    private HttpRequest.Builder buildBaseRequest(URI uri, String method, HttpRequest.BodyPublisher body) {
-        HttpRequest.Builder builder = HttpRequest.newBuilder()
-                .uri(uri)
-                .timeout(Duration.ofSeconds(30))
-                .header("apikey", SupabaseClient.SUPABASE_ANON_KEY);
+    private HttpURLConnection buildBaseRequest(URL url, String method) throws IOException {
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestMethod(method);
+        conn.setConnectTimeout(30000);
+        conn.setReadTimeout(30000);
+        conn.setRequestProperty("apikey", SupabaseClient.SUPABASE_ANON_KEY);
 
         if (accessToken != null && !accessToken.isEmpty()) {
-            builder.header("Authorization", "Bearer " + accessToken);
+            conn.setRequestProperty("Authorization", "Bearer " + accessToken);
         } else {
             System.out.println("[StorageClient] Warning: no Authorization header (token missing)");
         }
 
-        switch (method.toUpperCase()) {
-            case "GET": builder.GET(); break;
-            case "POST": builder.POST(body); break;
-            case "PUT": builder.PUT(body); break;
-            case "DELETE": builder.DELETE(); break;
-            default: throw new IllegalArgumentException("Unsupported HTTP method: " + method);
-        }
-        return builder;
+        return conn;
     }
 
-    private void handleError(HttpResponse<?> response) throws IOException {
-        if (response.statusCode() >= 400) {
-            String body;
-            try {
-                if (response.body() instanceof String) {
-                    body = (String) response.body();
-                } else if (response.body() instanceof InputStream) {
-                    InputStream is = (InputStream) response.body();
-                    body = new String(is.readAllBytes());
-                } else {
-                    body = response.body().toString();
+    private void handleError(HttpURLConnection conn) throws IOException {
+        int statusCode = conn.getResponseCode();
+        if (statusCode >= 400) {
+            InputStream errorStream = conn.getErrorStream();
+            String body = "Failed to read error stream";
+            if (errorStream != null) {
+                try (InputStreamReader isr = new InputStreamReader(errorStream, StandardCharsets.UTF_8);
+                     BufferedReader br = new BufferedReader(isr)) {
+                    StringBuilder sb = new StringBuilder();
+                    String line;
+                    while ((line = br.readLine()) != null) {
+                        sb.append(line);
+                    }
+                    body = sb.toString();
+                } catch (Exception e) {
+                    // Ignore
                 }
-            } catch (Exception e) {
-                body = "Failed to read response body";
             }
-            System.err.println("[StorageClient] API error " + response.statusCode() + ": " + body);
-            throw new IOException("API request failed with status " + response.statusCode() + ". Body: " + body);
+            System.err.println("[StorageClient] API error " + statusCode + ": " + body);
+            throw new IOException("API request failed with status " + statusCode + ". Body: " + body);
         }
     }
 
     public List<String> listFiles() throws IOException, InterruptedException {
         checkUserId();
 
+        String urlStr = SupabaseClient.SUPABASE_URL + "/storage/v1/object/list/" + SupabaseClient.STORAGE_BUCKET;
         String prefix = userId.endsWith("/") ? userId : userId + "/";
-        String url = SupabaseClient.SUPABASE_URL + "/storage/v1/object/list/" + SupabaseClient.STORAGE_BUCKET;
         String jsonBody = "{\"prefix\":\"" + prefix + "\"}";
 
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(url))
-                .timeout(Duration.ofSeconds(30))
-                .header("apikey", SupabaseClient.SUPABASE_ANON_KEY)
-                .header("Authorization", "Bearer " + accessToken)
-                .header("Content-Type", "application/json")
-                .POST(HttpRequest.BodyPublishers.ofString(jsonBody, StandardCharsets.UTF_8))
-                .build();
+        HttpURLConnection conn = buildBaseRequest(new URL(urlStr), "POST");
+        conn.setRequestProperty("Content-Type", "application/json");
+        conn.setDoOutput(true);
 
-        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        try (OutputStream os = conn.getOutputStream()) {
+            byte[] input = jsonBody.getBytes(StandardCharsets.UTF_8);
+            os.write(input, 0, input.length);
+        }
 
-        handleError(response);
+        handleError(conn);
 
         List<String> files = new ArrayList<>();
-        JsonNode root = mapper.readTree(response.body());
-
-        if (root.isArray()) {
-            for (JsonNode node : root) {
-                String fullName = node.get("name").asText();
-                if (fullName.startsWith(prefix)) {
-                    files.add(fullName.substring(prefix.length()));
-                } else {
-                    files.add(fullName);
+        try (InputStream is = conn.getInputStream()) {
+            JsonNode root = mapper.readTree(is);
+            if (root.isArray()) {
+                for (JsonNode node : root) {
+                    String fullName = node.get("name").asText();
+                    if (fullName.startsWith(prefix)) {
+                        files.add(fullName.substring(prefix.length()));
+                    } else {
+                        files.add(fullName);
+                    }
                 }
             }
         }
@@ -142,39 +134,44 @@ public class SupabaseStorageClient {
         }
 
         String path = getPrefixedPath(file.getName());
-        URI uri = URI.create(SupabaseClient.SUPABASE_URL + "/storage/v1/object/" + SupabaseClient.STORAGE_BUCKET + "/" + path + "?upsert=true");
+        URL url = new URL(SupabaseClient.SUPABASE_URL + "/storage/v1/object/" + SupabaseClient.STORAGE_BUCKET + "/" + path + "?upsert=true");
 
-        HttpRequest.BodyPublisher bodyPublisher = HttpRequest.BodyPublishers.ofFile(file.toPath());
-
-        HttpRequest.Builder builder = buildBaseRequest(uri, "POST", bodyPublisher);
+        HttpURLConnection conn = buildBaseRequest(url, "POST");
         String mime = Files.probeContentType(file.toPath());
-        builder.header("Content-Type", mime);
+        conn.setRequestProperty("Content-Type", mime);
+        conn.setDoOutput(true);
 
-        HttpResponse<String> response = client.send(builder.build(), HttpResponse.BodyHandlers.ofString());
+        try (OutputStream os = conn.getOutputStream(); FileInputStream fis = new FileInputStream(file)) {
+            byte[] buffer = new byte[4096];
+            int bytesRead;
+            while ((bytesRead = fis.read(buffer)) != -1) {
+                os.write(buffer, 0, bytesRead);
+            }
+        }
 
-        System.out.println("[StorageClient] UPLOAD response status: " + response.statusCode());
-        System.out.println("[StorageClient] UPLOAD response body: " + response.body());
+        System.out.println("[StorageClient] UPLOAD response status: " + conn.getResponseCode());
 
-        handleError(response);
+        handleError(conn);
     }
 
     public void downloadFile(String remoteFileName, File destination) throws IOException, InterruptedException {
         checkUserId();
 
         String path = getPrefixedPath(remoteFileName);
-        URI uri = URI.create(SupabaseClient.SUPABASE_URL + "/storage/v1/object/" + SupabaseClient.STORAGE_BUCKET + "/" + path);
+        URL url = new URL(SupabaseClient.SUPABASE_URL + "/storage/v1/object/" + SupabaseClient.STORAGE_BUCKET + "/" + path);
 
-        HttpRequest request = buildBaseRequest(uri, "GET", null).build();
+        HttpURLConnection conn = buildBaseRequest(url, "GET");
 
-        HttpResponse<InputStream> response = client.send(request, HttpResponse.BodyHandlers.ofInputStream());
-
-        if (response.statusCode() != 200) {
-            String body = new String(response.body().readAllBytes());
-            throw new IOException("Download failed, status: " + response.statusCode() + ", body: " + body);
+        if (conn.getResponseCode() != 200) {
+            handleError(conn);
         }
 
-        try (InputStream is = response.body(); OutputStream os = Files.newOutputStream(destination.toPath())) {
-            is.transferTo(os);
+        try (InputStream is = conn.getInputStream(); OutputStream os = Files.newOutputStream(destination.toPath())) {
+            byte[] buffer = new byte[4096];
+            int bytesRead;
+            while ((bytesRead = is.read(buffer)) != -1) {
+                os.write(buffer, 0, bytesRead);
+            }
         }
     }
 
@@ -182,17 +179,14 @@ public class SupabaseStorageClient {
         checkUserId();
 
         String path = getPrefixedPath(remoteFileName);
-        URI uri = URI.create(SupabaseClient.SUPABASE_URL + "/storage/v1/object/" + SupabaseClient.STORAGE_BUCKET + "/" + path);
+        URL url = new URL(SupabaseClient.SUPABASE_URL + "/storage/v1/object/" + SupabaseClient.STORAGE_BUCKET + "/" + path);
 
-        HttpRequest request = buildBaseRequest(uri, "DELETE", null).build();
+        HttpURLConnection conn = buildBaseRequest(url, "DELETE");
 
-        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+        System.out.println("[StorageClient] DELETE response status: " + conn.getResponseCode());
 
-        System.out.println("[StorageClient] DELETE response status: " + response.statusCode());
-        System.out.println("[StorageClient] DELETE response body: " + response.body());
-
-        if (response.statusCode() != 204 && response.statusCode() != 200) {
-            throw new IOException("Delete failed, status: " + response.statusCode() + ", body: " + response.body());
+        if (conn.getResponseCode() != 204 && conn.getResponseCode() != 200) {
+            handleError(conn);
         }
     }
 }
